--- a/SatelliteBank/UI/Xib/ChartCell.xib
+++ b/SatelliteBank/UI/Xib/ChartCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChartCell" rowHeight="224" id="KGk-i7-Jjw" customClass="ChartCell" customModule="SatelliteBank" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="224"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChartCell" rowHeight="311" id="KGk-i7-Jjw" customClass="ChartCell" customModule="SatelliteBank" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="311"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="224"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="311"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Irq-1r-9bt">
-                        <rect key="frame" x="16" y="16" width="288" height="192"/>
+                        <rect key="frame" x="16" y="16" width="288" height="279"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Загруженность и посещаемость" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YjX-ZX-qTV">
                                 <rect key="frame" x="0.0" y="0.0" width="288" height="20.333333333333332"/>
@@ -27,17 +27,17 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="evV-g7-Vp7">
-                                <rect key="frame" x="0.0" y="36.333333333333336" width="288" height="22"/>
+                                <rect key="frame" x="0.0" y="36.333333333333336" width="288" height="97.666666666666657"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_green" translatesAutoresizingMaskIntoConstraints="NO" id="gCd-3a-QMv">
-                                        <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
+                                        <rect key="frame" x="0.0" y="37.999999999999993" width="22" height="22"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="22" id="PDk-Qs-Xrl"/>
                                             <constraint firstAttribute="width" secondItem="gCd-3a-QMv" secondAttribute="height" id="wrG-uK-5Rb"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Нет очереди" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1SI-4u-QLt">
-                                        <rect key="frame" x="30" y="2.6666666666666643" width="100" height="17"/>
+                                        <rect key="frame" x="30" y="40.333333333333336" width="100" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="lIF-Ay-wT0"/>
                                         </constraints>
@@ -46,7 +46,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="(4 окна обслуживания)" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UBY-EF-RyW">
-                                        <rect key="frame" x="138" y="0.0" width="150" height="22"/>
+                                        <rect key="frame" x="138" y="31.999999999999996" width="150" height="33.666666666666657"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                         <nil key="highlightedColor"/>
@@ -54,13 +54,13 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="09:00 Обычно мало посетителей" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="07k-uQ-6Mn">
-                                <rect key="frame" x="0.0" y="74.333333333333329" width="288" height="17"/>
+                                <rect key="frame" x="0.0" y="150" width="288" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" systemColor="secondaryLabelColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="QdR-Dq-coH">
-                                <rect key="frame" x="0.0" y="107.33333333333333" width="288" height="29.999999999999986"/>
+                                <rect key="frame" x="0.0" y="183" width="288" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTk-J3-hFP">
                                         <rect key="frame" x="0.0" y="0.0" width="37.666666666666664" height="30"/>
@@ -68,53 +68,74 @@
                                         <state key="normal" title="Пн">
                                             <color key="titleColor" systemColor="labelColor"/>
                                         </state>
+                                        <connections>
+                                            <action selector="daySelect:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZNL-eU-mHD"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GyY-ld-2dJ">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GyY-ld-2dJ">
                                         <rect key="frame" x="41.666666666666671" y="0.0" width="37.666666666666671" height="30"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Вт">
                                             <color key="titleColor" systemColor="labelColor"/>
                                         </state>
+                                        <connections>
+                                            <action selector="daySelect:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="al3-sA-lTq"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3h-5j-hXI">
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3h-5j-hXI">
                                         <rect key="frame" x="83.333333333333329" y="0.0" width="37.666666666666671" height="30"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Ср">
                                             <color key="titleColor" systemColor="labelColor"/>
                                         </state>
+                                        <connections>
+                                            <action selector="daySelect:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="HTe-kc-i5q"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9SJ-MW-uUg">
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9SJ-MW-uUg">
                                         <rect key="frame" x="125" y="0.0" width="38" height="30"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Чт">
                                             <color key="titleColor" systemColor="labelColor"/>
                                         </state>
+                                        <connections>
+                                            <action selector="daySelect:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bL9-8x-Bdu"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5x-es-sD2">
+                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5x-es-sD2">
                                         <rect key="frame" x="167" y="0.0" width="37.666666666666657" height="30"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Пт">
                                             <color key="titleColor" systemColor="labelColor"/>
                                         </state>
+                                        <connections>
+                                            <action selector="daySelect:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="H5s-P7-fs6"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c86-nW-Kaj">
+                                    <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c86-nW-Kaj">
                                         <rect key="frame" x="208.66666666666666" y="0.0" width="37.666666666666657" height="30"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Сб">
                                             <color key="titleColor" systemColor="labelColor"/>
                                         </state>
+                                        <connections>
+                                            <action selector="daySelect:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="6JK-2j-BFg"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SmF-Cq-3Gu">
+                                    <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SmF-Cq-3Gu">
                                         <rect key="frame" x="250.33333333333329" y="0.0" width="37.666666666666657" height="30"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Вс">
                                             <color key="titleColor" systemColor="labelColor"/>
                                         </state>
+                                        <connections>
+                                            <action selector="daySelect:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Bqp-kP-D6Y"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZjP-NZ-vZI" customClass="BarChartView" customModule="DGCharts">
-                                <rect key="frame" x="0.0" y="153.33333333333334" width="288" height="38.666666666666657"/>
+                                <rect key="frame" x="0.0" y="229" width="288" height="50"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                         </subviews>
@@ -129,8 +150,15 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="chartView" destination="ZjP-NZ-vZI" id="UwH-nF-T92"/>
+                <outletCollection property="dayButtons" destination="cTk-J3-hFP" collectionClass="NSMutableArray" id="7Hb-SN-HFn"/>
+                <outletCollection property="dayButtons" destination="GyY-ld-2dJ" collectionClass="NSMutableArray" id="w9V-g8-HUB"/>
+                <outletCollection property="dayButtons" destination="o3h-5j-hXI" collectionClass="NSMutableArray" id="Alc-dd-tTn"/>
+                <outletCollection property="dayButtons" destination="9SJ-MW-uUg" collectionClass="NSMutableArray" id="W1P-9F-5TQ"/>
+                <outletCollection property="dayButtons" destination="M5x-es-sD2" collectionClass="NSMutableArray" id="ArL-DI-sMl"/>
+                <outletCollection property="dayButtons" destination="c86-nW-Kaj" collectionClass="NSMutableArray" id="gDf-du-z0B"/>
+                <outletCollection property="dayButtons" destination="SmF-Cq-3Gu" collectionClass="NSMutableArray" id="abE-Tz-P8c"/>
             </connections>
-            <point key="canvasLocation" x="129.7709923664122" y="71.83098591549296"/>
+            <point key="canvasLocation" x="129.7709923664122" y="102.46478873239437"/>
         </tableViewCell>
     </objects>
     <resources>
