--- a/SatelliteBank/UI/Xib/ChartCell.xib
+++ b/SatelliteBank/UI/Xib/ChartCell.xib
@@ -27,38 +27,33 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="evV-g7-Vp7">
-                                <rect key="frame" x="0.0" y="36.333333333333336" width="288" height="97.666666666666657"/>
+                                <rect key="frame" x="0.0" y="36.333333333333329" width="288" height="130.66666666666669"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_green" translatesAutoresizingMaskIntoConstraints="NO" id="gCd-3a-QMv">
-                                        <rect key="frame" x="0.0" y="37.999999999999993" width="22" height="22"/>
+                                        <rect key="frame" x="0.0" y="43.333333333333343" width="44" height="44"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="22" id="PDk-Qs-Xrl"/>
+                                            <constraint firstAttribute="width" constant="44" id="PDk-Qs-Xrl"/>
                                             <constraint firstAttribute="width" secondItem="gCd-3a-QMv" secondAttribute="height" id="wrG-uK-5Rb"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Нет очереди" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1SI-4u-QLt">
-                                        <rect key="frame" x="30" y="40.333333333333336" width="100" height="17"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="lIF-Ay-wT0"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="(4 окна обслуживания)" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UBY-EF-RyW">
-                                        <rect key="frame" x="138" y="31.999999999999996" width="150" height="33.666666666666657"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <color key="textColor" systemColor="secondaryLabelColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wTe-aj-Vai">
+                                        <rect key="frame" x="52" y="44.333333333333343" width="236" height="42"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Нет очереди" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="07k-uQ-6Mn">
+                                                <rect key="frame" x="0.0" y="0.0" width="236" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="(4 окна обслуживания)" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UBY-EF-RyW">
+                                                <rect key="frame" x="0.0" y="25" width="236" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="09:00 Обычно мало посетителей" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="07k-uQ-6Mn">
-                                <rect key="frame" x="0.0" y="150" width="288" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" systemColor="secondaryLabelColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="QdR-Dq-coH">
                                 <rect key="frame" x="0.0" y="183" width="288" height="30"/>
                                 <subviews>
@@ -150,6 +145,9 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="chartView" destination="ZjP-NZ-vZI" id="UwH-nF-T92"/>
+                <outlet property="loadImageView" destination="gCd-3a-QMv" id="j4a-gT-1Qf"/>
+                <outlet property="loadLabel" destination="07k-uQ-6Mn" id="v2C-6d-uBm"/>
+                <outlet property="waitLabel" destination="UBY-EF-RyW" id="IbR-Jj-x2F"/>
                 <outletCollection property="dayButtons" destination="cTk-J3-hFP" collectionClass="NSMutableArray" id="7Hb-SN-HFn"/>
                 <outletCollection property="dayButtons" destination="GyY-ld-2dJ" collectionClass="NSMutableArray" id="w9V-g8-HUB"/>
                 <outletCollection property="dayButtons" destination="o3h-5j-hXI" collectionClass="NSMutableArray" id="Alc-dd-tTn"/>
@@ -162,7 +160,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="icon_green" width="48" height="62"/>
+        <image name="icon_green" width="16" height="20.666666030883789"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
