--- a/SatelliteBank/Supporting Files/Base.lproj/Main.storyboard
+++ b/SatelliteBank/Supporting Files/Base.lproj/Main.storyboard
@@ -2,7 +2,63 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="NLU-8P-ey5">
+            <objects>
+                <viewController id="s0C-N2-xGd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Mc-lm-c5h">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yYb-FO-5PL">
+                                <rect key="frame" x="8" y="67" width="377" height="743"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Xiaomi, Третье транспортное кольцо, Канатчиково, Донской район, Москва, Центральный федеральный округ, 117449, Россия" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IuN-aB-Ivq">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="81.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Xiaomi, Третье транспортное кольцо, Канатчиково, Донской район, Москва, Центральный федеральный округ, 117449, Россия" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WZ9-AT-4BR">
+                                        <rect key="frame" x="0.0" y="89.333333333333371" width="377" height="81.333333333333314"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Xiaomi, Третье транспортное кольцо, Канатчиково, Донской район, Москва, Центральный федеральный округ, 117449, Россия" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n7f-gh-CMV">
+                                        <rect key="frame" x="0.0" y="178.66666666666669" width="377" height="564.33333333333326"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8XV-B3-TjU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="yYb-FO-5PL" firstAttribute="leading" secondItem="8XV-B3-TjU" secondAttribute="leading" constant="8" id="LZE-dA-HAA"/>
+                            <constraint firstItem="8XV-B3-TjU" firstAttribute="trailing" secondItem="yYb-FO-5PL" secondAttribute="trailing" constant="8" id="SfK-Jq-IYM"/>
+                            <constraint firstItem="yYb-FO-5PL" firstAttribute="top" secondItem="8XV-B3-TjU" secondAttribute="top" constant="8" id="WHC-so-Edv"/>
+                            <constraint firstItem="8XV-B3-TjU" firstAttribute="bottom" secondItem="yYb-FO-5PL" secondAttribute="bottom" constant="8" id="ufl-wP-nqS"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kEx-l6-ER1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="543" y="-282"/>
+        </scene>
+    </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
