Сделал запланированное посещение из экрана расчета маршрута.

--- a/SatelliteBank/UI/Xib/BankContentDescriptionCell.xib
+++ b/SatelliteBank/UI/Xib/BankContentDescriptionCell.xib
@@ -33,12 +33,12 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uda-fq-yta" customClass="ScheduleButton" customModule="SatelliteBank" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="138" width="188" height="44"/>
+                                <rect key="frame" x="0.0" y="138" width="195" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="gcs-K9-wOz"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Записаться на посещение"/>
+                                <state key="normal" title="Запланировать посещение"/>
                             </button>
                         </subviews>
                         <constraints>
